# cadical-learnt

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: Main.cpp
